Added the functionality of Cash Out Section using function

--- a/main.html
+++ b/main.html
@@ -132,8 +132,10 @@
             </section>
         </header>
     </section>
+    <script src="utilities/toggle.js"></script>
     <script src="utilities/utilities.js"></script>
     <script src="JS/addmoney.js"></script>
+    <script src="JS/cashout.js"></script>
 </body>
 
 </html>
