--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             </div>
         </div>
     </section>
-
     <script src="JS/login.js"></script>
+    <script src="utilities/utilities.js"></script>
 </body>
 
 </html>
