Added Get Bonus Section UI also Added it's Functionality

--- a/main.html
+++ b/main.html
@@ -173,6 +173,27 @@
                     </div>
                 </div>
             </section>
+
+            <!-- Get Bonus Coupon Section -->
+            <section id="bonus-coupon-section" class="my-2">
+                <h1 class="text-xl font-bold ml-5">Get Bonus</h1>
+                <div>
+                    <div class="hero-content flex-col lg:flex-row-reverse">
+                        <div class="card w-full max-w-sm shrink-0 shadow-2xl">
+                            <form class="card-body">
+                                <fieldset class="fieldset">
+                                    <label class="label text-base font-medium text-black">Enter Bonus Coupon</label>
+                                    <input id="coupon-code" type="text"
+                                    class="input rounded-full w-full border-none"
+                                    placeholder="Enter Your Coupon"/>
+
+                                    <button id="get-bonus-btn"class="btn btn-primary mt-4 rounded-full">Get Bonus</button>
+                                </fieldset>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </header>
     </section>
     <script src="utilities/toggle.js"></script>
@@ -181,6 +202,7 @@
     <script src="JS/cashout.js"></script>
     <script src="JS/transactionhistory.js"></script>
     <script src="JS/transfermoney.js"></script>
+    <script src="JS/bonuscoupon.js"></script>
 </body>
 
 </html>
