Activated the Log Out Button

--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
                     <h1 class="text-3xl font-bold text-center">$ <span id="main-balance">4500</span></h1>
                     <p class="border rounded p-1">Available Balance</p>
                 </div>
-                <button class="btn font-semibold btn-primary">Log Out</button>
+                <button id="log-out-btn" class="btn font-semibold btn-primary">Log Out</button>
             </nav>
             <div class="divider"></div>
             <section class="mt-6 mx-5">
@@ -243,6 +243,7 @@
     <script src="JS/transfermoney.js"></script>
     <script src="JS/bonuscoupon.js"></script>
     <script src="JS/paybill.js"></script>
+    <script src="JS/logout.js"></script>
 </body>
 
 </html>
