Added Hover and Focus in the Box section and updated more things about this project

--- a/index.html
+++ b/index.html
@@ -26,15 +26,16 @@
                     <form class="card-body">
                         <fieldset class="fieldset">
                             <label class="label">Account Number</label>
-                            <input value="01301301302" id="account-number" type="number" class="input" placeholder="Type your 11 digit Account Number" required />
+                            <input id="account-number" type="number" class="input" placeholder="Type your 11 digit Account Number" required />
                             <label class="label">Pin</label>
-                            <input value="1234" id="pin-number" type="text" class="input" placeholder="Enter your Pin" required />
+                            <input id="pin-number" type="text" class="input" placeholder="Enter your Pin" required />
                             <button id="login-btn" class="btn btn-primary mt-4 rounded-full">Login</button>
                         </fieldset>
                     </form>
                 </div>
             </div>
         </div>
+        <label>
     </section>
     <script src="JS/login.js"></script>
     <script src="utilities/utilities.js"></script>
