--- a/main.html
+++ b/main.html
@@ -27,37 +27,37 @@
 
                 <div class="cards grid grid-cols-3 mt-6 gap-2">
                     <!-- Card 1--------------------- -->
-                    <div id="add-money-box" class="box border py-4 text-center rounded-xl">
+                    <div id="add-money-box" class="box border py-4 text-center rounded-xl hover:bg-stone-300 hover:border-2 active:bg-slate-400">
                         <img class="w-8 mx-auto" src="assets/wallet1.png" alt="">
                         <h3>Add Money</h3>
                     </div>
 
                     <!-- Card 2-------------------- -->
-                    <div id="cash-out-box" class="box border py-4 text-center rounded-xl">
+                    <div id="cash-out-box" class="box border py-4 text-center rounded-xl hover:bg-stone-300 hover:border-2 active:bg-slate-400">
                         <img class="w-8 mx-auto" src="assets/send1.png" alt="">
                         <h3>Cash Out</h3>
                     </div>
 
                     <!-- Card 3--------------------- -->
-                    <div id="transfer-money-box" class="box border py-4 text-center rounded-xl">
+                    <div id="transfer-money-box" class="box border py-4 text-center rounded-xl hover:bg-stone-300 hover:border-2 active:bg-slate-400">
                         <img class="w-8 mx-auto" src="assets/money1.png" alt="">
                         <h3>Transfer Money</h3>
                     </div>
 
                     <!-- Card 4--------------------- -->
-                    <div id="get-bonus-box" class="box border py-4 text-center rounded-xl">
+                    <div id="get-bonus-box" class="box border py-4 text-center rounded-xl hover:bg-stone-300 hover:border-2 active:bg-slate-400">
                         <img class="w-8 mx-auto" src="assets/bonus1.png" alt="">
                         <h3>Get Bonus</h3>
                     </div>
 
                     <!-- Card 5-------------------- -->
-                    <div id="pay-bill-box" class="box border py-4 text-center rounded-xl">
+                    <div id="pay-bill-box" class="box border py-4 text-center rounded-xl hover:bg-stone-300 hover:border-2 active:bg-slate-400">
                         <img class="w-8 mx-auto" src="assets/purse1.png" alt="">
                         <h3>Pay Bill</h3>
                     </div>
 
                     <!-- Card 6--------------------- -->
-                    <div id="transaction-box" class="box border py-4 text-center rounded-xl">
+                    <div id="transaction-box" class="box border py-4 text-center rounded-xl hover:bg-stone-300 hover:border-2 active:bg-slate-400">
                         <img class="w-8 mx-auto" src="assets/transaction1.png" alt="">
                         <h3>Transactions</h3>
                     </div>
@@ -81,9 +81,9 @@
                                 </select>
                                 <fieldset class="fieldset">
                                     <label class="label text-base font-medium text-black">Bank Account Number</label>
-                                    <input id="add-money-account-number" type="number" value="01301301302"
-                                        class="input rounded-full w-full border-none"
-                                        placeholder="Enter 11 digit account number" />
+                                    <input id="add-money-account-number" type="number"
+                                    class="input rounded-full w-full border-none"
+                                    placeholder="Enter 11 digit account number" />
 
                                     <label class="label text-base font-medium text-black">Amount to Add</label>
                                     <input id="add-money-amount" type="text"
@@ -111,7 +111,7 @@
                             <form class="card-body">
                                 <fieldset class="fieldset">
                                     <label class="label text-base font-medium text-black">Bank Account Number</label>
-                                    <input id="cash-out-account-number" type="number" value="01301301302"
+                                    <input id="cash-out-account-number" type="number"
                                         class="input rounded-full w-full border-none"
                                         placeholder="Enter 11 digit account number" />
 
@@ -149,12 +149,12 @@
                             <form class="card-body">
                                 <fieldset class="fieldset">
                                     <label class="label text-base font-medium text-black">User Account Number</label>
-                                    <input id="transfer-money-account-number" type="number" value="01301301302"
+                                    <input id="transfer-money-account-number" type="number"
                                         class="input rounded-full w-full border-none"
                                         placeholder="Enter 11 digit account number" />
 
                                     <label class="label text-base font-medium text-black">Recipient's Account Number</label>
-                                    <input id="transfer-money-recipient-account-number" type="number" value="16161616163"
+                                    <input id="transfer-money-recipient-account-number" type="number"
                                         class="input rounded-full w-full border-none"
                                         placeholder="Enter 11 digit account number" />
 
@@ -214,7 +214,7 @@
                                 </select>
                                 <fieldset class="fieldset">
                                     <label class="label text-base font-medium text-black">Biller Account Number</label>
-                                    <input id="biller-account-number" type="number" value="12345678901"
+                                    <input id="biller-account-number" type="number"
                                         class="input rounded-full w-full border-none"
                                         placeholder="Enter 11 digit account number" />
 
@@ -244,6 +244,9 @@
     <script src="JS/bonuscoupon.js"></script>
     <script src="JS/paybill.js"></script>
     <script src="JS/logout.js"></script>
+    <script src="JS/boxfocus.js"></script>
 </body>
 
 </html>
+
+
